--- a/mon_style.css
+++ b/mon_style.css
@@ -9,7 +9,7 @@ body {
 header {
     background:#333;
     color: white;
-    padding: 15px;
+    padding: 15em;
     text-align: center;
 }
 
@@ -20,7 +20,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 15em;
 }
 
 nav ul li a {
@@ -30,37 +30,37 @@ nav ul li a {
 }
 
 section {
-    padding: 20px;
-    margin: 10px;
+    padding: 20em;
+    margin: 10em;
     /*background: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
+    border-radius: 5em;
+    box-shadow: 0 2em 5em rgba(0, 0, 0, 0.1);*/
 }
 h1{
     text-align: center;
     color:blue;
-    font-size: 16px;
+    font-size: 16em;
 }
 footer {
     /*text-align: center;
-    padding: 32px;
+    padding: 32em;
     color: white;
    position: fixed
     bottom:0rex;
     background: #333;
     margin-top: 300px;
-    height: 10px;*/
+    height: 10em;*/
     background:black;
     color: white;
-    padding: 32px;
+    padding: 32em;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 200em;
     
 }
 
 P{
 
-    font-size: 16px;
+    font-size: 16em;
 }
 .about{
     background:#f4f4f4;
@@ -71,22 +71,22 @@ P{
     background-position: 0%;
     height: auto;
     width: auto;
-    border-radius: 2px solid white;
+    border-radius: 2em solid white;
     border-radius: 0%;
 
 }
 
 /*avec sa j'ai fait mes contener*/
 .element1,.element2,.element3{
-    width: 400px; /* largeur de la boîte */
-    height: 150px; /* hauteur de la boîte */
+    width: 400em; /* largeur de la boîte */
+    height: 150em; /* hauteur de la boîte */
     background-color: beige; /* couleur de fond */
-    border-radius: 5px;/*solid black; bordure autour de la boîte */
-    padding: 35px; /* espacement interne */
-    margin: 50px auto;  
+    border-radius: 5em;/*solid black; bordure autour de la boîte */
+    padding: 35em; /* espacement interne */
+    margin: 50em auto;  
     color: black; /* couleur du texte */
     text-align: center; /* centrer le texte */
-    font-size: 18px; /* taille de la police */
+    font-size: 18em; /* taille de la police */
     text-decoration: none;
     transition: all 0.5s ease-in-out;
 
@@ -128,14 +128,14 @@ P{
 /*le bouton telecharger mon cv dans un bloak*/
 .cv{
     display: inline-block;
-    padding: 10px 15px;
+    padding: 10em 15em;
     background-color: blue;
     color: white;
     text-decoration: none;
-    font-size: 16px;
-    border-radius: 5px;
+    font-size: 16em;
+    border-radius: 5em;
     transition: background 0.3s;
-    margin-top: 20px;
+    margin-top: 20em;
     
 }
 .cv:hover {
@@ -143,14 +143,14 @@ P{
 }
 
 .photo{
-    border-radius: 100px;
+    border-radius: 100em;
     height: 150;
-    width: 150px;
+    width: 150em;
 }
 .contener{
     display: flex;  /* Met l’image et le texte sur la même ligne */
     align-items: center; /* Aligne le texte et l’image */
-    gap: 60px; /* Ajoute un espace entre l’image et le texte */
+    gap: 60em; /* Ajoute un espace entre l’image et le texte */
 }
 .element3:hover {
     transform: scale(1.1); /* Zoom sur le logo au survol */
