--- a/mon_style.css
+++ b/mon_style.css
@@ -14,11 +14,13 @@ header {
     padding: 15px;
     text-align: center;
 }
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
+ @media (max-width: 768px){
+     
+    nav ul {
+        list-style: none;
+        padding: 0;
+    }
+ }
 
 nav ul li {
     display: inline;
