--- a/mon_style.css
+++ b/mon_style.css
@@ -13,6 +13,7 @@ header {
     color: white;
     padding: 15px;
     text-align: center;
+    flex-wrap: wrap;
 }
  @media (max-width: 768px){
      
@@ -25,12 +26,14 @@ header {
 nav ul li {
     display: inline;
     margin: 0 15px;
+    flex-wrap: wrap;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    flex-wrap: wrap;
 }
 
 section {
