--- a/projects.css
+++ b/projects.css
@@ -6,13 +6,10 @@ body {
     color: white;*/
 }
 header {
-    background:#333;
+    background:black;
     color: white;
     padding: 15px;
     text-align: center;
-    
-    
-
 }
 nav ul {
     list-style: none;
