--- a/mon_style.css
+++ b/mon_style.css
@@ -19,7 +19,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333;
+    background-color: white;
     color: white;
 }
   
@@ -46,7 +46,7 @@ header {
     .nav-links {
       display: none;
       flex-direction: column;
-      background-color: #444;
+      background-color: white;
       position: absolute;
       top: 60px;
       right: 20px;
@@ -244,7 +244,7 @@ P{
     .menu {
       display: none;
       flex-direction: column;
-      background-color: #444;
+      background-color: white;
       position: absolute;
       top: 60px;
       right: 0;
