--- a/mon_style.css
+++ b/mon_style.css
@@ -15,12 +15,12 @@ header {
 
 /* Style de base */
 .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color:white;
+    background:black;
     color: white;
+    padding: 32px;
+    text-align: center;
+    margin-top: 200px;
+
 }
   
 .nav-links {
@@ -34,12 +34,6 @@ header {
     text-decoration: none;
 }
   
-  /* Cacher le bouton menu sur grand écran */
-.menu-toggle {
-    display: none;
-    font-size: 24px;
-    cursor: pointer;
-}
   
   /* Responsive : petit écran */
 @media (max-width: 768px) {
