--- a/mon_style.css
+++ b/mon_style.css
@@ -12,14 +12,29 @@ header {
     padding: 15px;
     text-align: center;
 }
-
-/* Style de base */
-.navbar{
-    background:black;
+header {
+    background:#333;
     color: white;
-    padding: 32px;
+    padding: 15px;
     text-align: center;
-    margin-top: 200px;
+    
+    
+
+}
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
   
 
