--- a/projects.css
+++ b/projects.css
@@ -11,55 +11,33 @@ header {
     padding: 15px;
     text-align: center;
 }
-/* Style de base */
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: white;
+
+  
+
+  
+header {
+    background:#333;
     color: white;
+    padding: 15px;
+    text-align: center;
+    
+    
+
 }
-  
-.nav-links {
+nav ul {
     list-style: none;
-    display: flex;
-    gap: 20px;
+    padding: 0;
 }
-  
-.nav-links li a {
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
     color: white;
     text-decoration: none;
-}
-  
-  /* Cacher le bouton menu sur grand écran */
-.menu-toggle {
-    display: none;
-    font-size: 24px;
-    cursor: pointer;
-}
-  
-  /* Responsive : petit écran */
-@media (max-width: 768px) {
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      background-color: white;
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      width: 150px;
-      padding: 10px;
-      border-radius: 8px;
-}
-  
-.nav-links.active {
-        display: flex;
-    }
-    .menu-toggle {
-        display: block;
-    }
-    
+    font-weight: bold;
 }
 footer {
     /*text-align: center;
