--- a/a-propos.css
+++ b/a-propos.css
@@ -22,11 +22,29 @@ body {
     display: flex;  /* Met l’image et le texte sur la même ligne */
     align-items: center; /* Aligne le texte et l’image */
     gap: 60px; /* Ajoute un espace entre l’image et le texte */
-    flex-wrap: wrap;
 }
 P{
 
     font-size: 16px;
+}
+nav {
+    background-color: #333;
+    padding: 10px;
+}
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+nav li {
+    display: inline;
+}
+nav a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
     
     
@@ -51,37 +69,7 @@ header {
     padding: 15px;
     text-align: center;
 }
-  
 
-  
-header {
-    background:#333;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    
-    
-
-}
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-  
-
-}
 footer {
     /*text-align: center;
     padding: 32px;
