--- a/a-propos.css
+++ b/a-propos.css
@@ -28,7 +28,7 @@ P{
     font-size: 16px;
 }
 nav {
-    background-color: #333;
+    background-color: black;
     padding: 10px;
 }
 nav ul {
@@ -42,7 +42,7 @@ nav li {
     display: inline;
 }
 nav a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-weight: bold;
 }
@@ -50,11 +50,7 @@ nav a {
     
 
 
-.photo{
-    border-radius: 100px;
-    height: 150;
-    width: 150px;
-}
+
 body {
     font-family: Arial, sans-serif;
    /* margin: 0;
