--- a/a-propos.css
+++ b/a-propos.css
@@ -27,22 +27,61 @@ P{
 
     font-size: 16px;
 }
-nav {
-    background-color: black;
-    padding: 10px;
+body {
+    font-family:sans-serif;
+   /* margin: 0;
+    padding: 0;
+    background: #f4f4f4;
+    color: white;*/
+}
+footer {
+    /*text-align: center;
+    padding: 32px;
+    color: white;
+   position: fixed
+    bottom:0rex;
+    background: #333;
+    margin-top: 300px;
+    height: 10px;*/
+    background:black;
+    color: white;
+    padding: 32px;
+    text-align: center;
+    margin-top: 400px;
+    
+    
+}
+/*
+body {
+    font-family: Arial, sans-serif;
+   /* margin: 0;
+    padding: 0;
+    background: #f4f4f4;
+    color: #333;*/
+
+
+header {
+    background:black;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+    
+    
+
 }
 nav ul {
     list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
     padding: 0;
 }
-nav li {
+
+nav ul li {
     display: inline;
+    margin: 0 15px;
 }
-nav a {
-    color: black;
+
+nav ul li a {
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
