--- a/a-propos.css
+++ b/a-propos.css
@@ -27,38 +27,18 @@ P{
 
     font-size: 16px;
 }
-body {
-    font-family:sans-serif;
-   /* margin: 0;
-    padding: 0;
-    background: #f4f4f4;
-    color: white;*/
+.photo{
+    border-radius: 100px;
+    height: 150;
+    width: 150px;
 }
-footer {
-    /*text-align: center;
-    padding: 32px;
-    color: white;
-   position: fixed
-    bottom:0rex;
-    background: #333;
-    margin-top: 300px;
-    height: 10px;*/
-    background:black;
-    color: white;
-    padding: 32px;
-    text-align: center;
-    margin-top: 400px;
-    
-    
-}
-/*
 body {
     font-family: Arial, sans-serif;
    /* margin: 0;
     padding: 0;
     background: #f4f4f4;
     color: #333;*/
-
+}
 
 header {
     background:black;
@@ -66,6 +46,11 @@ header {
     padding: 15px;
     text-align: center;
 }
+header {
+    background:#333;
+    color: white;
+    padding: 15px;
+    text-align: center;
     
     
 
@@ -85,25 +70,8 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
 }
-    
-    
+  
 
-
-
-body {
-    font-family: Arial, sans-serif;
-   /* margin: 0;
-    padding: 0;
-    background: #f4f4f4;
-    color: #333;*/
-}
-
-header {
-    background:black;
-    color: white;
-    padding: 15px;
-    text-align: center;
-}
 
 footer {
     /*text-align: center;
