--- a/projects.css
+++ b/projects.css
@@ -69,6 +69,7 @@ footer {
     text-decoration: none;
     transition: all 0.5s ease-in-out;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 
     
 
