--- a/projects.css
+++ b/projects.css
@@ -6,7 +6,7 @@ body {
     color: white;*/
 }
 header {
-    background:#333;
+    background:black;
     color: white;
     padding: 15px;
     text-align: center;
