--- a/mon_style.css
+++ b/mon_style.css
@@ -9,7 +9,7 @@ body {
 header {
     background:black;
     color: white;
-    padding: 15px;
+    padding: 15%;
     text-align: center;
 }
 nav ul {
@@ -19,7 +19,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin: 0 15px;
+    margin: 0 15%;
 }
 
 nav ul li a {
@@ -31,8 +31,8 @@ nav ul li a {
   
 
 section {
-    padding: 20px;
-    margin: 10px;
+    padding: 20%;
+    margin: 10%;
     /*background: white;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
@@ -40,7 +40,7 @@ section {
 h1{
     text-align: center;
     color:blue;
-    font-size: 16px;
+    font-size: 16%;
 }
 footer {
     /*text-align: center;
@@ -53,15 +53,15 @@ footer {
     height: 10px;*/
     background:black;
     color: white;
-    padding: 32px;
+    padding: 32%;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 200%;
     
 }
 
 P{
 
-    font-size: 16px;
+    font-size: 16%;
 }
 .about{
     background:#f4f4f4;
@@ -80,15 +80,15 @@ P{
 
 /*avec sa j'ai fait mes contener*/
 .element1,.element2,.element3{
-    width: 400px; /* largeur de la boîte */
-    height: 150px; /* hauteur de la boîte */
+    width: 400%; /* largeur de la boîte */
+    height: 150%; /* hauteur de la boîte */
     background-color: beige; /* couleur de fond */
-    border-radius: 5px;/*solid black; bordure autour de la boîte */
-    padding: 35px; /* espacement interne */
-    margin: 50px auto;  
+    border-radius: 5%;/*solid black; bordure autour de la boîte */
+    padding: 35%; /* espacement interne */
+    margin: 50% auto;  
     color: black; /* couleur du texte */
     text-align: center; /* centrer le texte */
-    font-size: 18px; /* taille de la police */
+    font-size: 18%; /* taille de la police */
     text-decoration: none;
     transition: all 0.5s ease-in-out;
      flex-wrap: wrap;
@@ -96,7 +96,7 @@ P{
 }
 .container,.contener{
     opacity: 0; /* Commence par être invisible */
-    transform: translateY(20px); /* Déplace légèrement l'élément vers le bas */
+    transform: translateY(20%); /* Déplace légèrement l'élément vers le bas */
     animation: fadeIn 1s forwards; /* Applique l'animation */
      flex-wrap: wrap;
 }
@@ -104,7 +104,7 @@ P{
     @keyframes fadeIn {
         0% {
             opacity: 0;
-            transform: translateY(20px);
+            transform: translateY(20%);
             }
         100% {
             opacity: 1;
