--- a/mon_style.css
+++ b/mon_style.css
@@ -9,7 +9,7 @@ body {
 header {
     background:black;
     color: white;
-    padding: 15%;
+    padding: 15px;
     text-align: center;
 }
 nav ul {
@@ -19,7 +19,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin: 0 15%;
+    margin: 0 15px;
 }
 
 nav ul li a {
@@ -83,12 +83,12 @@ P{
     width: 400px; /* largeur de la boîte */
     height: 150px; /* hauteur de la boîte */
     background-color: beige; /* couleur de fond */
-    border-radius: 5%;/*solid black; bordure autour de la boîte */
-    padding: 35%; /* espacement interne */
-    margin: 50% auto;  
+    border-radius: 5px;/*solid black; bordure autour de la boîte */
+    padding: 35px; /* espacement interne */
+    margin: 50px auto;  
     color: black; /* couleur du texte */
     text-align: center; /* centrer le texte */
-    font-size: 18%; /* taille de la police */
+    font-size: 18px; /* taille de la police */
     text-decoration: none;
     transition: all 0.5s ease-in-out;
      flex-wrap: wrap;
