--- a/mon_style.css
+++ b/mon_style.css
@@ -1,3 +1,7 @@
+.nav-links.mobile-menu{
+    display: flex;
+
+}
 body {
     font-family:sans-serif;
    /* margin: 0;
@@ -18,7 +22,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display:table-column;
     margin: 0 15px;
 }
 
