--- a/a-propos.css
+++ b/a-propos.css
@@ -1,3 +1,8 @@
+.nav-links.mobile-menu{
+    display: flex;
+    flex-wrap: wrap;
+
+}
 body {
     font-family:sans-serif;
    /* margin: 0;
@@ -5,19 +10,41 @@ body {
     background: #f4f4f4;
     color: white;*/
 }
+
+header {
+    background:black;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display:table-column;
+    margin: 0 15px;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+nav ul li a {
+    flex-wrap: wrap;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    flex-wrap: wrap;
+}
+  
 h1{
     color: blue;
     text-align: center;
     font-size: 20px;
 
 }
-body {
-    font-family: Arial, sans-serif;
-   /* margin: 0;
-    padding: 0;
-    background: #f4f4f4;
-    color: white;*/
-}
+
+
 .contener{
     display: flex;  /* Met l’image et le texte sur la même ligne */
     align-items: center; /* Aligne le texte et l’image */
@@ -32,37 +59,9 @@ P{
     height: 150;
     width: 150px;
 }
-body {
-    font-family: Arial, sans-serif;
-   /* margin: 0;
-    padding: 0;
-    background: #f4f4f4;
-    color: #333;*/
-}
 
-header {
-    background:black;
-    color: white;
-    padding: 15px;
-    text-align: center;
-}
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-  
 
 
 footer {
