--- a/competence.css
+++ b/competence.css
@@ -1,3 +1,8 @@
+.nav-links.mobile-menu{
+    display: flex;
+    flex-wrap: wrap;
+
+}
 body {
     font-family:sans-serif;
    /* margin: 0;
@@ -5,6 +10,33 @@ body {
     background: #f4f4f4;
     color: white;*/
 }
+
+header {
+    background:black;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display:table-column;
+    margin: 0 15px;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+nav ul li a {
+    flex-wrap: wrap;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    flex-wrap: wrap;
+}
+  
 footer {
     /*text-align: center;
     padding: 32px;
@@ -24,27 +56,7 @@ footer {
 }
 
 
-header {
-    background:black;
-    color: white;
-    padding: 15px;
-    text-align: center;
-}
-nav ul {
-    list-style: none;
-    padding: 0;
-}
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
 P{
     font-size: 16px;
     text-align: center;
