--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,8 @@
+.nav-links.mobile-menu{
+    display: flex;
+    flex-wrap: wrap;
+
+}
 body {
     font-family:sans-serif;
    /* margin: 0;
@@ -5,14 +10,12 @@ body {
     background: #f4f4f4;
     color: white;*/
 }
+
 header {
     background:black;
     color: white;
     padding: 15px;
     text-align: center;
-    
-    
-
 }
 nav ul {
     list-style: none;
@@ -20,15 +23,20 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display:table-column;
     margin: 0 15px;
+    flex-wrap: wrap;
+    list-style: none;
 }
 
 nav ul li a {
+    flex-wrap: wrap;
     color: white;
     text-decoration: none;
     font-weight: bold;
+    flex-wrap: wrap;
 }
+  
 footer {
     /*text-align: center;
     padding: 32px;
