--- a/a-propos.css
+++ b/a-propos.css
@@ -1,5 +1,6 @@
 .nav-links.mobile-menu{
     display: flex;
+    flex-direction: column;
 
 }
 body {
@@ -37,6 +38,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    display: block;
 }
   
 h1{
