--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,7 @@
 
 .nav-links.mobile-menu{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 
 }
 body {
@@ -36,7 +36,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-    flex-wrap: wrap;
+     display: block;
 }
 .photo{
     position: absolute;
