--- a/mon_style.css
+++ b/mon_style.css
@@ -5,6 +5,8 @@
 }
 body {
     font-family:sans-serif;
+    height: 100%;
+    width: 100%;
    /* margin: 0;
     padding: 0;
     background: #f4f4f4;
