--- a/mon_style.css
+++ b/mon_style.css
@@ -18,6 +18,8 @@ header {
     color: white;
     padding: 15px;
     text-align: center;
+    height: 100%;
+    width: 100%;
 }
 nav ul {
     list-style: none;
@@ -63,6 +65,8 @@ footer {
     padding: 32px;
     text-align: center;
     margin-top: 200px;
+    height: 100%;
+    width: 100%;
     
 }
 
