--- a/a-propos.css
+++ b/a-propos.css
@@ -5,6 +5,8 @@
 }
 body {
     font-family:sans-serif;
+    height: 100%;
+    width: 100%;
    /* margin: 0;
     padding: 0;
     background: #f4f4f4;
@@ -16,6 +18,8 @@ header {
     color: white;
     padding: 15px;
     text-align: center;
+    height: 100%;
+    width: 100%;
 }
 nav ul {
     list-style: none;
@@ -78,6 +82,8 @@ footer {
     padding: 32px;
     text-align: center;
     margin-top: 300px;
+    height: 100%;
+    width: 100%;
     
 }
 
