--- a/mon_style.css
+++ b/mon_style.css
@@ -14,6 +14,9 @@ body {
     background: #f4f4f4;
     color: white;*/
 }
+a{
+    color:white;
+}
 
 header {
     background:black;
@@ -65,6 +68,7 @@ footer {
     padding: 32px;
     text-align: center;
     margin-top: 200px;
+    
     
 }
 
