--- a/mon_style.css
+++ b/mon_style.css
@@ -3,6 +3,13 @@
     flex-direction: column;
 
 }
+.grande-boite {
+    padding: 20px;
+    background-color: white;
+    border: 2px solid #aaa;
+    display: flex; /* pour aligner les boîtes sur une ligne */
+    gap: 10px;      /* espacement entre les boîtes */
+}
 .logo{
     position: absolute;
     left: 20px;
