--- a/mon_style.css
+++ b/mon_style.css
@@ -4,6 +4,9 @@
 
 }
 .grande-boite {
+    width: 100%;
+    max-width: 600px;
+    flex-wrap: wrap;
     padding: 20px;
     background-color: white;
     border: 2px solid #aaa;
