--- a/mon_style.css
+++ b/mon_style.css
@@ -3,6 +3,10 @@
     flex-direction: column;
 
 }
+html, body {
+    height: 100%;
+    margin: 0;
+}
 .grande-boite {
     width: 100%;
     flex-wrap: wrap;
