--- a/mon_style.css
+++ b/mon_style.css
@@ -74,7 +74,9 @@ footer {
     color: white;
     padding: 32px;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 400px;
+    height: 100%;
+    width: 100%;
     
     
 }
