--- a/projects.css
+++ b/projects.css
@@ -69,7 +69,7 @@ footer {
 
 }
 /*avec sa j'ai fait mes contener*/
-.element1,.element2{
+.element1,.element2,.element3{
     width: 500px; /* largeur de la boîte */
     height: 300px; /* hauteur de la boîte */
     background-color: beige; /* couleur de fond */
